#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.17.* UPDATES
--------------------------------------------------------------------------------
42: Table design in Markdown adjusted
41: Cosmetics for finalReport, status messages printed into the final report were removed.
40: Plenty of scatterplots added to related metrics to sequencing depth
39: More exportable tables added
38: Harmonised the plot colours in the final report
37: Added more descriptions to the final report
36: Deduplication vs Coverage plot added
35: QC tables display now the full dataset, without any threshold
34: QC tables can now be exported
33: Server config information added to the reports
32: QC plots now show ommit the missing R2 output (and do not duplicate R1 to pretend it to be R2)
31: Expection added in finalReport in case FastQC/MultiQC report different binnings in their reports for R1 and R2
30: Internal improvement: Duplicated Chunk names in report-knitr files are allowed
29: Paths in the configuration file can now be relative
28: Special case for flanking site determination caught (in case alignment starts at base 0, bed could have been negativ)
27: FinalReport polished and more statistics added
26: Chapter "Individual analysis" added to the finalReport
25: FinalReport: The ACGT-plot was improved in readability
24: FinalReport: Total sequences stats report now table with samples with less than 100k reads 
23: Bugfix, flanking sequence extraction ignored the first alignment
22: flanking bed files are now tab-delimted, as reqired by bedtools
21: Header lines removed from Stringtie output to ensure strict gtf compatability
20: Variant calling missingnes in percentages are now displayed on a fixed 0-100 scale