@@ -18,10 +18,12 @@ tmpdir: "/scratch/project_2001746/tmp"
 
 # Parameters for the GBS-SNP-CROP tools
 ################################################################################
-enz1: "AATTC"                     # First restriction enzyme sequence
-enz2: "GCATG"                     # Second restriction enzyme sequence
+enz1: "GAATTC"                     # First restriction enzyme sequence
+enz2: "GCATGC"                     # Second restriction enzyme sequence
 libname: "AllReads"               # 
 libtype: "PE"                     # Library type, paired-end (PE) or single-end (SE)
+minLength: 300                    # Minimum aimed fragment size (during wetlab size selection phase)
+maxLength: 550                    # Maximum aimed fragment size (during wetlab size selection phase)
 
 # Filter parameters for the mock reference refinement
 ################################################################################
