@@ -28,7 +28,9 @@ rule R_finalReport:
         pa=expand("%s/FASTQ/TRIMMED/alignments_reference/{samples}.paired_alignments" % (config["project-folder"]), samples=samples),
         isSample=expand("%s/Stringtie/{samples}.intersected_with_mockOnRef_loci.is" % (config["project-folder"]), samples=samples),
         leftSample=expand("%s/FASTQ/TRIMMED/alignments_reference/{samples}.flanking_left.fa" % (config["project-folder"]), samples=samples),
-        rightSample=expand("%s/FASTQ/TRIMMED/alignments_reference/{samples}.flanking_right.fa" % (config["project-folder"]), samples=samples)
+        rightSample=expand("%s/FASTQ/TRIMMED/alignments_reference/{samples}.flanking_right.fa" % (config["project-folder"]), samples=samples),
+        full="%s/References/full_inSilico_reference.fa" % (config["project-folder"]),
+        selected="%s/References/sizeSelected_inSilico_reference.fa" % (config["project-folder"])
     output:
         "%s/finalReport.html" % (config["project-folder"])
     log:
@@ -43,8 +45,12 @@ rule R_finalReport:
        pipeConfig=config["pipeline-config"],
        serverConfig=config["server-config"],
        refGenome=config["genome"],
+       fullInsilico=config["full-insilico-genome"],
+       selectedInsilico=config["selected-insilico-genome"],
        enz1=config["enz1"],
-       enz2=config["enz2"]
+       enz2=config["enz2"],
+       minLength=config["minLength"],
+       maxLength=config["maxLength"]
     shell:"""
        R -e "projFolder <- '{params.projFolder}'; \
              pipelineFolder <- '{params.pipeFolder}'; \
@@ -53,6 +59,10 @@ rule R_finalReport:
              serverConfig.file <- '{params.serverConfig}'; \
              enz1 <- '{params.enz1}'; \
              enz2 <- '{params.enz2}'; \
+             minLength <- '{params.minLength}'; \
+             maxLength <- '{params.maxLength}'; \
+             fullInsilico <- '{params.fullInsilico}'; \
+             selectedInsilico <- '{params.selectedInsilico}'; \
              snakemake <- TRUE;\
              options(knitr.duplicate.label = 'allow');\
              source('{input.script}')" &> {log}
@@ -180,4 +190,52 @@ rule R_MockEval:
              snakemake <- TRUE;\
              options(knitr.duplicate.label = 'allow');\
              rmarkdown::render('{input.script}',output_file='{output}')" &> {log}
+    """
+
+rule R_InsilicoReport:
+    """
+    Create the in-silico report (R).
+    """
+    input:
+        script=config["insilico-report-script"],
+        fsFull="%s/BAM/Insitu/full/{samples}.sam.flagstat" % (config["project-folder"]),
+        cFull="%s/BAM/Insitu/full/{samples}.coverage" % (config["project-folder"]),
+        fsSelected="%s/BAM/Insitu/selected/{samples}.sam.flagstat" % (config["project-folder"]),
+        cSelected="%s/BAM/Insitu/selected/{samples}.coverage" % (config["project-folder"])
+    output:
+        "%s/Insilico-Report.html" % (config["project-folder"])
+    log:
+        "%s/logs/R/InsilicoCalling-Report.log" % (config["project-folder"])
+    benchmark:
+        "%s/benchmark/R_InsilicoReport.tsv" % (config["project-folder"])
+    singularity:
+        config["singularity"]["r-gbs"]
+    params:
+       projFolder=config["project-folder"],
+       pipeFolder=config["pipeline-folder"],
+       pipeConfig=config["pipeline-config"],
+       refGenome=config["genome"],
+       fullInsilico=config["full-insilico-genome"],
+       selectedInsilico=config["selected-insilico-genome"],
+       enz1=config["enz1"],
+       enz2=config["enz2"],
+       minLength=config["minLength"],
+       maxLength=config["maxLength"]
+    shell:"""
+       echo "Creating the Insilico-Report"
+       echo "###################################################################"
+       echo ""
+       
+       R -e "projFolder <- '{params.projFolder}'; \
+             refGenome.file <- '{params.refGenome}'; \
+             pipelineConfig.file <- '{params.pipeConfig}'; \
+             enz1 <- '{params.enz1}'; \
+             enz2 <- '{params.enz2}'; \
+             minLength <- '{params.minLength}'; \
+             maxLength <- '{params.maxLength}'; \
+             fullInsilico <- '{params.fullInsilico}'; \
+             selectedInsilico <- '{params.selectedInsilico}'; \
+             snakemake <- TRUE;\
+             options(knitr.duplicate.label = 'allow');\
+             source('{input.script}')" &> {log}
     """
