@@ -5,13 +5,13 @@ if(!is.element("snakemake",ls())){
   refGenome.file <- ""
 }
 
-createRMD.command <- paste0("cat ",pipelineFolder,"/scripts/Rmodules/QC-header.Rmd ",
+createRMD.command <- paste0("cat ",pipelineFolder,"/scripts/Rmodules/Insilico-header.Rmd ",
                                    pipelineFolder,"/scripts/Rmodules/helpFunctions.Rmd ",
                                    pipelineFolder,"/scripts/Rmodules/generalWorkflow.Rmd ",
                                    pipelineFolder,"/scripts/Rmodules/basicStats.Rmd ",
-                                   pipelineFolder,"/scripts/Rmodules/QC.Rmd ",
-                                   "> ",projFolder,"/QC-Report.Rmd")
+                                   pipelineFolder,"/scripts/Rmodules/Insilico.Rmd ",
+                                   "> ",projFolder,"/Insilico-Report.Rmd")
 
 system(createRMD.command)
 
-rmarkdown::render(file.path(projFolder,"QC-Report.Rmd"), output_file=file.path(projFolder,"QC-Report.html"))
+rmarkdown::render(file.path(projFolder,"Insilico-Report.Rmd"), output_file=file.path(projFolder,"Insilico-Report.html"))
